components/nonmem-parser/src/model/snapshots/nonmem_parser__model__parameters__tests__omega_parameters_row_major.snap
---
source: components/nonmem-parser/src/model/parameters.rs
expression: pairs
---
[
    (
        "OMEGA(1,1)",
        "ETA1",
    ),
    (
        "OMEGA(2,2)",
        "ETA2",
    ),
    (
        "OMEGA(3,3)",
        "ETA3",
    ),
    (
        "OMEGA(4,3)",
        "ETA3:ETA4",
    ),
    (
        "OMEGA(4,4)",
        "ETA4",
    ),
    (
        "OMEGA(5,5)",
        "ETA5",
    ),
    (
        "OMEGA(6,5)",
        "ETA5:ETA6",
    ),
    (
        "OMEGA(6,6)",
        "ETA6",
    ),
    (
        "OMEGA(7,7)",
        "ETA7",
    ),
    (
        "OMEGA(8,7)",
        "ETA7:ETA8",
    ),
    (
        "OMEGA(8,8)",
        "ETA8",
    ),
    (
        "OMEGA(9,9)",
        "ETA9",
    ),
    (
        "OMEGA(10,9)",
        "ETA9:ETA10",
    ),
    (
        "OMEGA(10,10)",
        "ETA10",
    ),
    (
        "OMEGA(11,11)",
        "ETA11",
    ),
    (
        "OMEGA(12,11)",
        "ETA11:ETA12",
    ),
    (
        "OMEGA(12,12)",
        "ETA12",
    ),
    (
        "OMEGA(13,11)",
        "ETA11:ETA13",
    ),
    (
        "OMEGA(13,12)",
        "ETA12:ETA13",
    ),
    (
        "OMEGA(13,13)",
        "ETA13",
    ),
    (
        "OMEGA(14,11)",
        "ETA11:ETA14",
    ),
    (
        "OMEGA(14,12)",
        "ETA12:ETA14",
    ),
    (
        "OMEGA(14,13)",
        "ETA13:ETA14",
    ),
    (
        "OMEGA(14,14)",
        "ETA14",
    ),
    (
        "OMEGA(15,15)",
        "ETA15",
    ),
    (
        "OMEGA(16,15)",
        "ETA15:ETA16",
    ),
    (
        "OMEGA(16,16)",
        "ETA16",
    ),
    (
        "OMEGA(17,17)",
        "ETA17",
    ),
    (
        "OMEGA(18,18)",
        "ETA18",
    ),
    (
        "OMEGA(19,18)",
        "ETA18:ETA19",
    ),
    (
        "OMEGA(19,19)",
        "ETA19",
    ),
    (
        "OMEGA(20,20)",
        "ETA20",
    ),
    (
        "OMEGA(21,20)",
        "ETA20:ETA21",
    ),
    (
        "OMEGA(21,21)",
        "ETA21",
    ),
    (
        "OMEGA(22,20)",
        "ETA20:ETA22",
    ),
    (
        "OMEGA(22,21)",
        "ETA21:ETA22",
    ),
    (
        "OMEGA(22,22)",
        "ETA22",
    ),
    (
        "OMEGA(23,20)",
        "ETA20:ETA23",
    ),
    (
        "OMEGA(23,21)",
        "ETA21:ETA23",
    ),
    (
        "OMEGA(23,22)",
        "ETA22:ETA23",
    ),
    (
        "OMEGA(23,23)",
        "ETA23",
    ),
    (
        "OMEGA(24,24)",
        "ETA24",
    ),
    (
        "OMEGA(25,24)",
        "ETA24:ETA25",
    ),
    (
        "OMEGA(25,25)",
        "ETA25",
    ),
    (
        "OMEGA(26,24)",
        "ETA24:ETA26",
    ),
    (
        "OMEGA(26,25)",
        "ETA25:ETA26",
    ),
    (
        "OMEGA(26,26)",
        "ETA26",
    ),
    (
        "OMEGA(27,27)",
        "ETA27",
    ),
    (
        "OMEGA(28,27)",
        "ETA27:ETA28",
    ),
    (
        "OMEGA(28,28)",
        "ETA28",
    ),
    (
        "OMEGA(29,27)",
        "ETA27:ETA29",
    ),
    (
        "OMEGA(29,28)",
        "ETA28:ETA29",
    ),
    (
        "OMEGA(29,29)",
        "ETA29",
    ),
    (
        "OMEGA(30,30)",
        "ETA30",
    ),
    (
        "OMEGA(31,30)",
        "ETA30:ETA31",
    ),
    (
        "OMEGA(31,31)",
        "ETA31",
    ),
    (
        "OMEGA(32,30)",
        "ETA30:ETA32",
    ),
    (
        "OMEGA(32,31)",
        "ETA31:ETA32",
    ),
    (
        "OMEGA(32,32)",
        "ETA32",
    ),
]
